Resolucion de pequeños bugs

--- a/views/partials/nav-bar.ejs
+++ b/views/partials/nav-bar.ejs
@@ -10,7 +10,7 @@
             <!-- ocultar boton en mobile, mostrar en el resto -->
         </div>
     </section>
-    <% console.log(locals.userClient) %>
+   
         <div class="login">
 
 
@@ -40,7 +40,7 @@
                                 <% } %>
 
                                     <div class="cart">
-                                        <a href="productCart"><i class="fas fa-shopping-cart"></i></a>
+                                        <a href="/productCart"><i class="fas fa-shopping-cart"></i></a>
                                         <i class="fas fa-chevron-down"></i>
                                     </div>
         </div>
