--- a/views/users/clientsDetail.ejs
+++ b/views/users/clientsDetail.ejs
@@ -78,21 +78,21 @@
                     <section class="icon-categories">
                         <article class="icon-article">
                             <!-- meter if en los links para /rubros/plomero o /dentista -->
-                            <a href="../Mecanico">
+                            <a href="../rubros/Mecanico">
                                 <!-- mecanica auto 1-->
                                 <i class="fas fa-wrench"></i>
                                 <p class="icon-txt">Mecanicos/as</p>
                             </a>
                         </article>
                         <article class="icon-article">
-                            <a href="../Electricista">
+                            <a href="../rubros/Electricista">
                                 <!-- electricista 2-->
                                 <i class="fas fa-plug"></i>
                                 <p class="icon-txt">Electricistas</p>
                             </a>
                         </article>
                         <article class="icon-article">
-                            <a href="../Odontologo">
+                            <a href="../rubros/Odontologo">
                                 <!-- dentistas 3-->
                                 <i class="fas fa-tooth"></i>
                                 <p class="icon-txt">Odontologos/as</p>
@@ -100,7 +100,7 @@
                         </article>
 
                         <article class="icon-article">
-                            <a href="../Plomero">
+                            <a href="../rubros/Plomero">
                                 <!-- plomeria 4-->
                                 <i class="fas fa-faucet"></i>
                                 <p class="icon-txt">Plomeros/as</p>
@@ -108,7 +108,7 @@
                         </article>
 
                         <article class="icon-article">
-                            <a href="../Carpintero">
+                            <a href="../rubros/Carpintero">
                                 <!-- carpinteria 5-->
                                 <i class="fas fa-hammer"></i>
                                 <p class="icon-txt">Carpinteros/as/
@@ -116,7 +116,7 @@
                             </a>
                         </article>
                         <article class="icon-article">
-                            <a href="../Pintor">
+                            <a href="../rubros/Pintor">
                                 <!-- pintores 6-->
                                 <i class="fas fa-paint-roller"></i>
                                 <p class="icon-txt">Pintores/as</p>
