--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -297,3 +297,17 @@ main {
   font-size: 0.8em;
   margin-top: 10px;
 }
+
+.errors { 
+  margin: auto;
+color: rgb(255, 0, 0);
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  
+  width: 90%;
+  padding: 20px;
+  max-width: 700px;
+  background-color: white;;
+font-size: 25px;
+font-weight: 400;}
