--- a/views/login.ejs
+++ b/views/login.ejs
@@ -25,7 +25,7 @@
         <% if(locals.errors !=undefined){ %>
           <% for(let i=0; i<errors.length; i++){ %>
             <ul>
-              <li>
+              <li class ="errors">
                 <%= errors[i].msg %>
               </li>
             </ul>
