--- a/views/users/deleteClient.ejs
+++ b/views/users/deleteClient.ejs
@@ -20,39 +20,39 @@
         <%- include("../partials/nav-bar") %>
 
             <main>
-                <form action="/clients/registerClients" method="POST" enctype="multipart/form-data" class="clientForm">
+                <form action="/clients/<%=toDelete[0].dni%>?_method=DELETE" method="POST" enctype="multipart/form-data" class="clientForm">
                     <div class="registerInput">
                         <label for="firstName">Nombre:
-                            <input type="text" name="firstName" id="firstNombre" placeholder="Ej: Cosme">
+                            <input type="text" name="firstName" id="firstNombre" placeholder="Ej: Cosme" value="<%=toDelete[0].firstName%>">
                         </label>
                     </div>
                     <div class="registerInput">
-                        <label for="lastName">Apellido:
-                            <input type="text" name="lastName" id="lastName" placeholder="Ej: Fulanito">
+                        <label for="lastName"> Apellido:
+                            <input type="text" name="lastName" id="lastName" placeholder="Ej: Fulanito" value="<%=toDelete[0].lastName%>">
                         </label>
                     </div>
                     <div class="registerInput">
                         <label for="email">Email:
-                            <input type="email" name="email" id="email">
+                            <input type="email" name="email" id="email" value="<%=toDelete[0].email%>">
                         </label>
                     </div>
                     <div class="registerInput localidad-list">
                         <label>Localidad
                             <select name="localidad">
-                                <option value="Capital Federal" selected>Capital Federal</option>
-                                <option value="Conurbano">Conurbano</option>
-                                <option value="Interior">Interior</option>
+                                <option value=<%=(toDelete[0].localidad=="Capital Federal" ) ? "selected" : "" %>>Capital Federal</option>
+                                <option value=<%=(toDelete[0].localidad=="Conurbano" ) ? "selected" : "" %>>Conurbano</option>
+                                <option value=<%=(toDelete[0].localidad=="Interior" ) ? "selected" : "" %>>Interior</option>
                             </select>
                         </label>
                     </div>
                     <div class="registerInput">
                         <label for="adress">Dirección:
-                            <input type="text" name="adress" id="adress" placeholder="Calle falsa 123 2A">
+                            <input type="text" name="adress" id="adress" placeholder="Calle falsa 123 2A" value="<%=toDelete[0].adress%>">
                         </label>
                     </div>
                     <div class="registerInput">
                         <label for="dni">DNI:
-                            <input type="number" name="dni" id="dni" placeholder="Documento Nacional de Identidad">
+                            <input type="number" name="dni" id="dni" placeholder="Documento Nacional de Identidad" value="<%=toDelete[0].dni%>">
                         </label>
                     </div>
                     <div class="registerInput avatar">
@@ -60,16 +60,8 @@
                             <input type="file" name="avatar" accept=".jpg, .png, .bmp">
                         </label>
                     </div>
-                    <div class="registerInput">
-                        <label for="password">Contraseña:
-                            <input type="password" name="password" id="password">
-                        </label>
-                    </div>
-                    <div class="registerInput">
-                        <label for="passwordConfirm">Confirmar Contraseña:
-                            <input type="password" name="passwordConfirm" id="passwordConfirm">
-                        </label>
-                    </div>
+                    
+                    
                     <div class="confirm-button">
                         <button type="submit">Enviar</button>
                     </div>
