Listado de Rubros, ruta y controlador

--- a/views/rubros.ejs
+++ b/views/rubros.ejs
@@ -21,6 +21,17 @@
     <%- include("partials/nav-bar") %>
 
       <main>
+<h2 style="color:red"> Pendiente Acomodar </h2>
+        <div><% for (let i =0 ; i< professions.length; i++  ) { %> 
+
+          <%=professions[i].profession  %>
+          
+          
+          <% } %> 
+          
+    
+        </div>
+
         <p class="title-rubros">Todos Nuestros Profesionales de:</p>
         <div class="all-index">
           <section class="icon-categories">
