--- a/public/css/theme.css
+++ b/public/css/theme.css
@@ -32,6 +32,7 @@ main {
 .header-top {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   text-align: center;
   padding: 10px;
   flex-wrap: wrap;
@@ -40,6 +41,9 @@ main {
 }
 
 .search-bar {
+  display: flex;
+  align-items: baseline;
+  justify-content: flex-end;
   flex-grow: 1;
   text-align: center;
   width: 50%;
@@ -47,12 +51,18 @@ main {
 }
 .search-bar input {
   width: 80%;
-  margin-top: 40px;
+  /* margin-top: 40px; */
   height: 25px;
+  border: none;
+  border-radius: 5px 0 0 5px;
+  padding: 0 0.5rem;
 }
 
 .search-bar button {
-  height: 25px;
+  /* height: 25px; */
+  padding: 5px;
+  border: none;
+  border-radius: 0 5px 5px 0;
 }
 .top-phrase {
   display: none;
