--- a/views/rubros.ejs
+++ b/views/rubros.ejs
@@ -21,161 +21,70 @@
     <%- include("partials/nav-bar") %>
 
       <main>
-<h2 style="color:red"> Pendiente Acomodar </h2>
-        <div><% for (let i =0 ; i< professions.length; i++  ) { %> 
-
-          <%=professions[i].profession  %>
-          
-          
-          <% } %> 
-          
-    
-        </div>
 
         <p class="title-rubros">Todos Nuestros Profesionales de:</p>
         <div class="all-index">
           <section class="icon-categories">
-            <article class="icon-article">
 
-              <a href="rubros/Mecanico">
+            <% for (let i =0 ; i< professions.length; i++  ) { %> 
 
-                <i class=" prueba fas fa-wrench"></i>
-                <p class="icon-txt">Mecanica</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Electricista">
+              <article class="icon-article">
 
-                <i class=" prueba fas fa-plug"></i>
-                <p class="icon-txt">Electricidad</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Odontologo">
-
-                <i class=" prueba fas fa-tooth"></i>
-                <p class="icon-txt">Odontologia</p>
-              </a>
-            </article>
-
-            <article class="icon-article">
-              <a href="rubros/Plomero">
-
-                <i class=" prueba fas fa-faucet"></i>
-                <p class="icon-txt">Plomeria</p>
-              </a>
-            </article>
-
-            <article class="icon-article">
-              <a href="rubros/Carpintero">
-
-                <i class=" prueba fas fa-hammer"></i>
-                <p class="icon-txt">Carpinteria</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Pintor">
-
-                <i class=" prueba fas fa-paint-roller"></i>
-                <p class="icon-txt">Pintura</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Abogado">
-                <i class=" prueba fas fa-gavel"></i>
-                <p class="icon-txt">Abogacia</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Full Stack Web Dev">
-                <i class=" prueba fas fa-laptop-code"></i>
-                <p class="icon-txt">Full Stack Web Developer</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Gasista">
-                <i class=" prueba fas fa-burn"></i>
-                <p class="icon-txt">Gas</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Destapador">
-                <i class=" prueba fas fa-sink"></i>
-                <p class="icon-txt">Destapaciones</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Catering">
-                <i class=" prueba fas fa-utensils"></i>
-                <p class="icon-txt">Catering</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Empapelador">
-                <i class=" prueba fas fa-scroll"></i>
-                <p class="icon-txt">Empapelacion</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Jardinero">
-                <i class=" prueba fas fa-seedling"></i>
-                <p class="icon-txt">Jardineria</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Contador">
-                <i class="prueba fas fa-search-dollar"></i>
-                <p class="icon-txt">Contaduria</p>
-              </a>
-            </article>
-            <!-- <article class="icon-article">
-              <a href="rubros/Jardinero-Deluxe">
-                <i class=" prueba fas fa-cannabis"></i>
-                <p class="icon-txt">Jardineria Deluxe</p>
-              </a>
-            </article> -->
-            <article class="icon-article">
-              <a href="rubros/Instalador AC">
-                <i class=" prueba fas fa-wind"></i>
-                <p class="icon-txt">instalacion de AC</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Fletero">
-                <i class=" prueba fas fa-people-carry"></i>
-                <p class="icon-txt">Mudanzas</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Fumigador">
-                <i class=" prueba fas fa-bug"></i>
-                <p class="icon-txt">Fumigacion</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Cuidado de Menores">
-                <i class=" prueba fas fa-baby"></i>
-                <p class="icon-txt">Cuidado de Menores</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Prof Particular">
-                <i class=" prueba fas fa-chalkboard-teacher"></i>
-                <p class="icon-txt">Enseñanza Particular</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Paseador">
-                <i class=" prueba fas fa-paw"></i>
-                <p class="icon-txt">Paseo Animal</p>
-              </a>
-            </article>
-            <article class="icon-article">
-              <a href="rubros/Piletero">
-                <i class=" prueba fas fa-swimming-pool"></i>
-                <p class="icon-txt">Pileteria</p>
-              </a>
-            </article>
+                <a href="rubros/<%= professions[i].profession %>">
+  
+                  <i class=" prueba fas <% if (professions[i].profession) {
+                    switch (professions[i].profession) {
+                      case 'Mecanica':%><%= 'fa-wrench' %><%
+                        break;
+                      case 'Electricidad':%><%= 'fa-plug' %><%
+                        break;
+                      case 'Odontologia':%><%= 'fa-tooth' %><%
+                        break;
+                      case 'Plomeria':%><%= 'fa-faucet' %><%
+                        break;
+                      case 'Carpinteria':%><%= 'fa-hammer' %><%
+                        break;
+                      case 'Pintura':%><%= 'fa-paint-roller' %><%
+                        break;
+                      case 'Abogacia':%><%= 'fa-gavel' %><%
+                        break;
+                      case 'Full Stack Web Developer':%><%= 'fa-laptop-code' %><%
+                        break;
+                      case 'Gas':%><%= 'fa-burn' %><%
+                        break;
+                      case 'Destapaciones':%><%= 'fa-sink' %><%
+                        break;
+                      case 'Catering':%><%= 'fa-utensils' %><%
+                        break;
+                      case 'Empapelacion':%><%= 'fa-scroll' %><%
+                        break;
+                      case 'Jardineria':%><%= 'fa-seedling' %><%
+                        break;
+                      case 'Contaduria':%><%= 'fa-search-dollar' %><%
+                        break;
+                      case 'Instalacion de AC':%><%= 'fa-wind' %><%
+                        break;
+                      case 'Mudanzas':%><%= 'fa-people-carry' %><%
+                        break;
+                      case 'Fumigacion':%><%= 'fa-bug' %><%
+                        break;
+                      case 'Cuidado de Menores':%><%= 'fa-baby' %><%
+                        break;
+                      case 'Clases Particulares':%><%= 'fa-chalkboard-teacher' %><%
+                        break;
+                      case 'Paseo Animal':%><%= 'fa-paw' %><%
+                        break;
+                      case 'Pileteria':%><%= 'fa-swimming-pool' %><%
+                        break;
+                      default:%><%= 'fa-cannabis' %><%
+                        break;
+                    } 
+                  } %> "></i>
+ 
+                  <p class="icon-txt"><%= professions[i].profession %></p>
+                </a>
+              </article>
+            <% } %> 
 
           </section>
         </div>
