--- a/views/prueba.ejs
+++ b/views/prueba.ejs
@@ -10,18 +10,10 @@
 
 <body>
     <div>
-        <% for(let i=0; i<professionals.length; i++){ %>
-            <p>
-                <a href="/<% professionals[i].professions[0].profession %>/<% professionals[i].cuit %> ">
-                <%= professionals[i].clients.firstName %>
-                    <!--magia de leo -->
-                </a>
-            </p>
-            <p>
-                <%= professionals[i].professions[0].profession %>
-            </p>
-            <% } %>
-                <% %>
+
+<%= console.log(result)     %> 
+
+       
     </div>
 
     <div>
