Creacion de Cliente en DB, y con errores el Prof (minor bugs)

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,7 +37,7 @@
           </div>
           <div class="work-with-us-button">
             <!-- href URL (no ruta de carpeta) -->
-            <a href="/rubros/registerProf"><button type="submit">Sumáte a Nuestro Equipo de
+            <a href="/clients/registerClients"><button type="submit">Sumáte a Nuestro Equipo de
                 Profesionales</button></a>
           </div>
           <h3 class="title-categories">Categorias mas Solicitadas</h3>
