--- a/views/users/registerClients.ejs
+++ b/views/users/registerClients.ejs
@@ -23,7 +23,7 @@
         <form action="/clients/registerClients" method="POST" enctype="multipart/form-data" class="clientForm">
           <div class="registerInput">
             <label for="firstName">Nombre:
-              <input type="text" name="firstName" id="firstNombre" placeholder="Ej: Cosme">
+              <input type="text" name="firstName" id="firstName" placeholder="Ej: Cosme">
             </label>
           </div>
           <div class="registerInput">
@@ -36,18 +36,24 @@
               <input type="email" name="email" id="email">
             </label>
           </div>
+          <div class="registerInput">
+            <label for="mobile">Telefono (Sin espacios ni Guiones):
+              <input type="number" name="mobile" id="mobile" placeholder="Ej: 01112345678">
+            </label>
+          </div>
           <div class="registerInput localidad-list">
-            <label>Localidad
-              <select name="localidad">
-                <option value="Capital Federal" selected>Capital Federal</option>
-                <option value="Conurbano">Conurbano</option>
-                <option value="Interior">Interior</option>
+            <label>Localidad donde Reside
+              <select name="city_Id">
+                <!-- usar una API -->
+                <option value="1" selected>Capital Federal</option>
+                <option value="2">Conurbano</option>
+                <option value="3">Interior</option>
               </select>
             </label>
           </div>
           <div class="registerInput">
-            <label for="adress">Dirección:
-              <input type="text" name="adress" id="adress" placeholder="Calle falsa 123 2A">
+            <label for="address">Dirección:
+              <input type="text" name="address" id="address" placeholder="Calle falsa 123 2A">
             </label>
           </div>
           <div class="registerInput">
@@ -58,6 +64,14 @@
           <div class="registerInput avatar">
             <label for="avatar">Foto de Perfil
               <input type="file" name="avatar" accept=".jpg, .png, .bmp">
+            </label>
+          </div>
+          <div class="registerInput localidad-list">
+            <label>Perfil Usuario
+              <select name="role">
+                <option value="Client" selected>Cliente</option>
+                <option value="Professional">Profesional</option>
+              </select>
             </label>
           </div>
           <div class="registerInput">
